implementação do gateway
